[tool.poetry]
name = "procare-downloader"
version = "0.1.0"
description = ""
authors = ["loesak <aaronloes+github@loesoft.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
pytest = "^7.1.3"
pytest-httpserver = "^1.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
